--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pyproj==1.9.5.1
-geopy==1.12.0
-geopandas==0.4.0
-networkx==2.2
-numpy==1.15.4
-Shapely==1.6.4.post1
-matplotlib==2.2.2
-scipy==1.0.1
-nose==1.3.7
-typing==3.6.6
+pyproj>=1.9.6
+geopy>=1.12.0
+geopandas>=0.4.0
+networkx>=2.2
+numpy>=1.15.4
+shapely>=1.2.18
+matplotlib>=2.2.2
+scipy>=1.0.1
+nose>=1.3.7
+typing>=3.6.6
