--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ pyproj>=1.9.6
 geopy>=1.12.0
 geopandas>=0.4.0
 networkx>=2.2
-numpy>=1.15.4
+numpy>=1.12.0
 shapely>=1.2.18
 matplotlib>=2.2.2
-scipy>=1.0.1
+scipy>=0.19.0rc2
 nose>=1.3.7
 typing>=3.6.6
