--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pyproj>=1.9.6
+pyproj==1.9.6
 geopy>=1.12.0
-geopandas>=0.4.0
-networkx>=2.2
+geopandas==0.4.0
+networkx==2.2
 numpy>=1.12.0
+pandas==0.23.0
 shapely>=1.2.18
 scipy>=0.19.0rc2
 nose>=1.3.7
