--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,11 @@ jobs:
               environment:
                   PYVERS: 36
 
+        working_directory: ~/repo
+
+        steps:
+            - test_steps_python
+
 workflows:
     version: 2
     run_tests:
