Removing python38 for now

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
                 name: run tests
                 command: |
                     . venv/bin/activate
-                    python -m nose --with-xunit
+                    python -m nose --with-xunit -v
 
             - store_artifacts:
                 path: nosetests.xml
@@ -60,15 +60,6 @@ jobs:
         steps:
             - test_steps_python
 
-    python38:
-        parallelism: 2
-        docker:
-            - image: circleci/python:3.8
-
-        working_directory: ~/repo
-
-        steps:
-            - test_steps_python
 
 workflows:
     version: 2
@@ -76,4 +67,3 @@ workflows:
         jobs:
             - python37
             - python36
-            - python38
